# Novacoin-Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  novacoin.conf.example
src/: block.h  blockchain.cpp  blockchain.h  bus.cpp  bus.h  cli.cpp  cli.h  config.cpp  config.h  logging.cpp  logging.h  main.cpp  miner.cpp  miner.h  novacoin.cpp  novacoin.h  transaction.cpp  utils.h
src/consensus/: block.cpp  block.h  blockchain.cpp  blockchain.h  merkle.cpp  merkle.h  tx.cpp  tx.h  utxo.h  validation.cpp
src/crypto/: sha256.cpp  sha256.h  uint256.cpp  uint256.h
src/db/: blockstore.cpp  blockstore.h
src/miner/: miner.cpp  miner.h
src/primitives/: block.cpp  transaction.h
src/wallet/: keystore.h  wallet.cpp  wallet.h
test/: test_novacoin.cpp
