cmake_minimum_required(VERSION 3.15)
project(NovacoinCore VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(SRC_FILES src/main.cpp src/novacoin.cpp)
add_executable(novacoin-node ${SRC_FILES})
target_include_directories(novacoin-node PRIVATE src)
if (MSVC)
  target_compile_definitions(novacoin-node PRIVATE -D_WIN32_WINNT=0x0A00)
endif()